--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "v2board-home-mofast",
   "version": "0.0.0",
   "author": {
-    "name": "MiyaUU 幂雅悠悠",
+    "name": "飓风加速",
     "repository": {
-      "url": "https://github.com/MiyaUU/v2board-theme-lib/v2board-home-mofast"
+      "url": "https://github.com/zsf214/v2board-theme-lib"
     }
   },
   "scripts": {
